--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: React course
+name: Trigger Another Project Build
 
 on:
   workflow_dispatch:
@@ -16,14 +16,14 @@ jobs:
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
-    - name: Run testing
+    - name: Trigger Another Project Build
       env:
         REPO_NAME: ${{ github.event.inputs.repository_name }}
         BRANCH: ${{ github.event.inputs.branch }}
       run: |
-        curl -X POST -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
-        -H "Accept: application/vnd.github.v3+json" \
-        "https://api.github.com/repos/${REPO_NAME}/actions/workflows/testing-flow.yaml/dispatches" \
+        curl -XPOST -u "${{ secrets.PAT_USERNAME}}:${{secrets.PAT_TOKEN}}" \
+        -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" \
+        "https://api.github.com/repos/jdmesalosada/${REPO_NAME}/dispatches" \
         -d '{"ref": "${BRANCH}"}'
