--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,10 +23,4 @@ jobs:
         REPO_NAME: ${{ github.event.inputs.repository_name }}
         BRANCH: ${{ github.event.inputs.branch }}
       run: |
-        curl -L \
-        -X POST \
-        -H "Accept: application/vnd.github+json" \
-        -H "Authorization: Bearer ${{secrets.PAT_TOKEN}}" \
-        -H "X-GitHub-Api-Version: 2022-11-28" \
-        https://api.github.com/repos/jdmesalosada/serenity-rest-archetype/dispatches \
-        -d '{"event_type":"on-demand-test","client_payload":{"unit":false,"integration":true}}'
+        curl -L -X POST -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{secrets.PAT_TOKEN}}" https://api.github.com/repos/jdmesalosada/serenity-rest-archetype/dispatches -d '{"ref": "${BRANCH}"}'
