--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,9 +6,11 @@ on:
       repository_name:
         description: 'Name of the repository to build (e.g., owner/repo)'
         required: true
+        default: 'serenity-rest-archetype'
       branch:
         description: 'Branch to build (e.g., main)'
         required: true
+        default: 'main'
 
 jobs:
   build:
@@ -23,4 +25,4 @@ jobs:
         REPO_NAME: ${{ github.event.inputs.repository_name }}
         BRANCH: ${{ github.event.inputs.branch }}
       run: |
-        curl -L -X POST -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{secrets.PAT_TOKEN}}" https://api.github.com/repos/jdmesalosada/serenity-rest-archetype/dispatches -d '{"event_type":"on-demand-test","client_payload":{"unit":false,"integration":true}}'
+        curl -L -X POST -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{secrets.PAT_TOKEN}}" https://api.github.com/repos/jdmesalosada/serenity-rest-archetype/dispatches -d '{"event_type": "Trigger Workflow"}'
