--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,9 +13,9 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v3
     - name: Run testing  
-      uses: convictional/trigger-workflow-and-wait@v1.3.0
-        with:
-          owner: jdmesalosada
-          repo: react-course
-          github_token: ${{ secrets.PAT_TOKEN }}
-          workflow_file_name: testing-flow.yaml
+    - uses: convictional/trigger-workflow-and-wait@v1.3.0
+      with:
+        owner: jdmesalosada
+        repo: react-course
+        github_token: ${{ secrets.PAT_TOKEN }}
+        workflow_file_name: testing-flow.yaml          
