trigger workflow and wait

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,7 +12,9 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
-    - name: Run testing  
+    - name: Run testing
+      run: |
+          echo "Running tests"
     - uses: convictional/trigger-workflow-and-wait@v1.3.0
       with:
         owner: jdmesalosada
